deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagent-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nagent-server
    app.kubernetes.io/component: nagent-server
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
